docs/apache-airflow-providers-microsoft-mssql/4.2.0/_sources/_api/airflow/providers/microsoft/mssql/hooks/mssql/index.rst.txt
airflow.providers.microsoft.mssql.hooks.mssql
=============================================

.. py:module:: airflow.providers.microsoft.mssql.hooks.mssql

.. autoapi-nested-parse::

   Microsoft SQLServer hook module.



Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.mssql.hooks.mssql.MsSqlHook


Module Contents
---------------

.. py:class:: MsSqlHook(*args, sqlalchemy_scheme = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.sql.hooks.sql.DbApiHook`


   Interact with Microsoft SQL Server.

   :param args: passed to DBApiHook
   :param sqlalchemy_scheme: Scheme sqlalchemy connection.  Default is ``mssql+pymssql`` Only used for
     ``get_sqlalchemy_engine`` and ``get_sqlalchemy_connection`` methods.
   :param kwargs: passed to DbApiHook


   .. py:attribute:: conn_name_attr
      :value: 'mssql_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'mssql_default'



   .. py:attribute:: conn_type
      :value: 'mssql'



   .. py:attribute:: hook_name
      :value: 'Microsoft SQL Server'



   .. py:attribute:: supports_autocommit
      :value: True



   .. py:attribute:: DEFAULT_SQLALCHEMY_SCHEME
      :value: 'mssql+pymssql'



   .. py:attribute:: schema


   .. py:property:: sqlalchemy_scheme
      :type: str


      Sqlalchemy scheme either from constructor, connection extras or default.



   .. py:property:: dialect_name
      :type: str



   .. py:property:: dialect
      :type: airflow.providers.common.sql.dialects.dialect.Dialect



   .. py:method:: get_uri()

      Extract the URI from the connection.

      :return: the extracted uri.



   .. py:method:: get_sqlalchemy_connection(connect_kwargs = None, engine_kwargs = None)

      Sqlalchemy connection object.



   .. py:method:: get_conn()

      Return ``pymssql`` connection object.



   .. py:method:: set_autocommit(conn, autocommit)

      Set the autocommit flag on the connection.



   .. py:method:: get_autocommit(conn)

      Get autocommit setting for the provided connection.

      :param conn: Connection to get autocommit setting from.
      :return: connection autocommit setting. True if ``autocommit`` is set
          to True on the connection. False if it is either not set, set to
          False, or the connection does not support auto-commit.



   .. py:method:: get_openlineage_database_info(connection)

      Return MSSQL specific information for OpenLineage.



   .. py:method:: get_openlineage_database_dialect(connection)

      Return database dialect.



   .. py:method:: get_openlineage_default_schema()

      Return current schema.



